force-app/main/default/classes/Controllers Apex/objects/Account/fields/active_contact_count__c.field-meta.xml
<CustomField>
    <fullName>active_contact_count__c</fullName>
    <label>active_contact_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>