force-app/main/default/classes/Controllers Apex/objects/Account/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <type>Date</type>
</CustomField>