force-app/main/default/classes/Controllers Apex/objects/Account/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <type>Date</type>
</CustomField>