force-app/main/default/classes/Controllers Apex/objects/Account/validationRules/account_rev.validationRule-meta.xml
<ValidationRule>
    <fullName>account_rev</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL(Ownership, &quot;Public&quot;),  ISNULL( AnnualRevenue ) ,(IF( ISPICKVAL(Ownership, &quot;Private&quot;),  ISNULL( AnnualRevenue ),false )))</errorConditionFormula>
    <errorMessage>Public Ownership have to fill Annual Revenue</errorMessage>
</ValidationRule>